tests/paczka1/small_fuzzy/21906563.err
Error in line 3: dmYu20AAfS0 A951 11,1
Error in line 5: ARyoo1rmfg A951 21,1
